--- a/CodingChallenge.ChallengeServer.Api/appsettings.Development.json
+++ b/CodingChallenge.ChallengeServer.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Debug"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ChallengeServer": {
+    "_PluginDir": "plugins",
+    "RepositoryName": "MyRepository"
+  }
 }
