--- a/buildScripts/AllInOne/docker-compose.yml
+++ b/buildScripts/AllInOne/docker-compose.yml
@@ -22,3 +22,5 @@ services:
       environment:
         MONGO_INITDB_ROOT_USERNAME: root
         MONGO_INITDB_ROOT_PASSWORD: example
+      volumes:
+        - './db:/data/db'
