--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,6 +18,7 @@ env:
   COSMOSDB_ENDPOINT: https://coderdojo-discordbot-new.documents.azure.com:443/
   COSMOSDB_NAME: MAINBBOT
 
+# $PWD seems to be the rootDirectory of the repo
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
@@ -25,15 +26,23 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Init Project
+      - 
+        name: Init Project
         run: |
-          echo "CurrentDir: $PWD"
-          ls -la
           chmod +x ./buildScripts/repository/init.sh
           ./buildScripts/repository/init.sh
+      - 
+        name: Build Base Api
+        run: docker build -t dcapi . -f ./buildScripts/Api/Dockerfile-Base
+      - 
+        name: Build Demo Api Server
+        run: docker build -t dcapi-demo-plugin . -f ./buildScripts/Api/Dockerfile-DemoPlugin
+      - 
+        name: Build Bot
+        run: docker build -t dcbot . -f ./buildScripts/Bot/Dockerfile
+      
 
-      # - name: Build image
-      #   run: docker build . --file Dockerfile --tag $IMAGE_NAME
+        # run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
       # - name: Log into registry
       #   run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
