--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,12 +27,12 @@ jobs:
       - 
         name: Calculate Publishing Variables
         run: |
-          IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/
+          IMAGE_ID=docker.pkg.github.com/${{ github.repository }}
 
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
 
-          VERSION=${{github.run_number}}
+          VERSION=0.1.${{github.run_number}}
 
           echo "IMAGE_ID=$IMAGE_ID" >> $GITHUB_ENV
           echo "VERSION=$VERSION" >> $GITHUB_ENV
