--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -92,7 +92,19 @@ jobs:
 
           docker push $CURRENT_ID:$VERSION
           docker push $CURRENT_ID:latest
-        
+      - 
+        name: Deploy to Hetzner via SSH action
+        uses: appleboy/ssh-action@v0.1.3
+        with:
+          HOST: ${{ secrets.DOCKERDEPLOY_HOST }}
+          USERNAME: ${{ secrets.DOCKERDEPLOY_HOST_USER }}
+          port: ${{ secrets.DOCKERDEPLOY_HOST_PORT }}
+          KEY: ${{ secrets.DOCKERDEPLOY_PK }}
+          envs: ${{ secrets.DOCKERDEPLOY_HOST }}
+          script: |
+            cd /root/custom_dockerfiles/infrastructure
+            echo "${{secrets.GITHUB_TOKEN}}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+            docker pull ghcr.io/jkamsker/codingchallenge/discord-bot:latest && docker-compose up -d
       # - name: Deploy to Hetzner via SSH action
       #   uses: appleboy/ssh-action@v0.1.3
       #   with:
